# GUX

./: .gitignore  README.md
proj1/: .gitignore  CMakeLists.txt  Imakefile  Makefile  draw.c
proj2/: Makefile  calc.c
